회원정보 변경 Front추가

--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -8,7 +8,7 @@
         <div class="nav-top-menu">
           <li id="login"><a href="/login">로그인</a></li>
           <li id="signup"><a href="/signup">회원가입</a></li>
-          <!--          <li id="username"><a href="mycoupang">유저이름 </a>님</li>-->
+          <!--          <li id="username"><a href="/mc">유저이름 </a>님</li>-->
           <!--          <li id="logout"><a href="/logout">logout</a></li>-->
         </div>
       </div>
@@ -25,7 +25,7 @@
             <i class="fas fa-search" id="nav-search-icon"></i>
           </div>
           <div class="nav-icon">
-            <div class="nav-mycoupang" onclick="location.href='/mycoupang'">
+            <div class="nav-mycoupang" onclick="location.href='/mc'">
               <i class="far fa-user fa-2x nav-mycoupang-icon"></i>
               <span class="nav-icon-title">마이쿠팡</span>
             </div>
