--- a/src/main/resources/templates/userModify.html
+++ b/src/main/resources/templates/userModify.html
@@ -26,7 +26,7 @@
         <tbody>
         <tr>
           <th scope="row">아이디(이메일)</th>
-          <td>user1.com</td>
+          <td th:text="${user.getEmail()}"></td>
         </tr>
         <tr>
           <th scope="row">비밀번호</th>
