--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -25,7 +25,7 @@
             <i class="fas fa-search" id="nav-search-icon"></i>
           </div>
           <div class="nav-icon">
-            <div class="nav-mycoupang" onclick="location.href='/mc'">
+            <div class="nav-mycoupang" onclick="location.href='/order/list'">
               <i class="far fa-user fa-2x nav-mycoupang-icon"></i>
               <span class="nav-icon-title">마이쿠팡</span>
             </div>
