홈페이지 상품 List pagination

--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -14,3 +14,107 @@ html, body {
 .content-container {
   padding-top: 30px;
 }
+
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
+h2 {
+  font-size: 18px;
+  padding: 14px 10px;
+}
+
+h3 {
+  font-size: 16px;
+  padding: 12px 10px;
+}
+
+img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+a {
+  display: block;
+  text-decoration: none;
+  width: 100%;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: #333;
+}
+
+.grid-container {
+  text-align: center;
+  max-width: 1024px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  /*grid-template-rows: 1fr 1fr 1fr;*/
+}
+
+.grid-item {
+  border: 1px solid #ccc;
+  margin: 1%;
+  display: inline-block;
+}
+
+.vew-product {
+  color: #333;
+  width: 100%;
+  display: block;
+  margin: 0;
+}
+
+.view-product * {
+  color: #333;
+}
+
+#main {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+span:hover {
+  cursor: pointer;
+}
+
+#pagination {
+  position: fixed;
+  bottom: 5vw;
+  width: 500px;
+  justify-content: space-around;
+  display: flex;
+  left: calc(50% - 150px);
+  background-color: #888888;
+  font-weight: 600;
+}
+
+.selected-num {
+  color: #0074e9;
+  background-color: yellow;
+}
+
+span {
+  user-select: none;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
