--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
   <meta charset="UTF-8">
   <title>Coupang</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+        crossorigin="anonymous"/>
+  <script type="text/javascript"
+          src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script type="text/javascript"
           src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="/css/home.css">
@@ -14,6 +18,31 @@
 </head>
 <body>
 <div th:replace="nav.html :: fragment-nav()"></div>
-
+<main id="main">
+  <div class="grid-container">
+    <div th:each="product : ${productPage.content}" class="grid-item">
+      <a th:href="@{/products/{productId}(productId=${product.id})}" class="view-product">
+        <img th:src="${product.thumbnailUrls[0].thumbnailUrl}">
+        <p th:text="${product.title}"></p>
+        <p th:text="${product.price}+ ' 원'"></p>
+        <span th:if="${product.rocketShipping}">로켓배송</span>
+      </a>
+    </div>
+  </div>
+</main>
+<div id="pagination">
+  <span th:if="${productPage.getNumber()}/10 >= 1">
+    <a th:href="@{/(page= ${productPage.getNumber() / 10 * 10 -1})}">이전 페이지</a>
+  </span>
+  <th:block th:each="idx : ${#numbers.sequence(productPage.getNumber()/10 * 10 + 1, T(Math).min(productPage.getNumber()/10 * 10 + 10, productPage.getTotalPages()))}">
+    <span class="selected-num" th:if="${idx - 1 == productPage.getNumber()}" th:text="${idx}"></span>
+    <span th:unless="${idx - 1 == productPage.getNumber()}">
+      <a th:href="@{/(page= ${idx - 1})}" th:text="${idx}"></a>
+    </span>
+  </th:block>
+  <span th:if="${productPage.getNumber()}/10 != ${productPage.getTotalPages() - 1}/10">
+    <a th:href="@{/(page = ${productPage.getNumber() / 10 + 10})}">다음 페이지</a>
+  </span>
+</div>
 </body>
 </html>
