--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -2,48 +2,15 @@ html, body {
   height: 100%;
 }
 
-.content {
-  margin: auto;
-  padding-top: 54px;
-  max-width: 935px;
-  align-content: center;
-  height: 100%;
-  box-sizing: border-box;
-}
-
-.content-container {
-  padding-top: 30px;
-}
-
 *, *:before, *:after {
   box-sizing: border-box;
 }
 
-h2 {
-  font-size: 18px;
-  padding: 14px 10px;
-}
 
-h3 {
-  font-size: 16px;
-  padding: 12px 10px;
-}
-
-img {
+#main img {
   width: 100%;
   height: auto;
   display: block;
-}
-
-a {
-  display: block;
-  text-decoration: none;
-  width: 100%;
-}
-
-a:hover {
-  text-decoration: underline;
-  color: #333;
 }
 
 .grid-container {
