--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,17 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Coupang</title>
-  <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
-        crossorigin="anonymous"/>
+  <link rel="stylesheet" href="/css/style.css">
   <script type="text/javascript"
           src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script type="text/javascript"
           src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="/css/home.css">
-  <link rel="stylesheet" href="/css/nav.css">
 </head>
 <body>
 <div th:replace="nav.html :: fragment-nav()"></div>
