--- a/src/main/resources/templates/mycoupang/userModify.html
+++ b/src/main/resources/templates/mycoupang/userModify.html
@@ -4,21 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Coupang</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-        crossorigin="anonymous">
-
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
-        crossorigin="anonymous"/>
+  <link rel="stylesheet" href="/css/style.css">
   <script type="text/javascript"
           src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
           integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
           crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/css/mycoupang.css">
-  <link rel="stylesheet" href="/css/nav.css">
 </head>
 <body>
 <div th:replace="nav.html :: fragment-nav()"></div>
