--- a/src/main/resources/static/css/product.css
+++ b/src/main/resources/static/css/product.css
@@ -21,3 +21,68 @@
 #categoryTrack li a {
   display: inline;
 }
+
+.prod-image {
+  position: relative;
+  float: left;
+  width: 490px;
+  text-align: center;
+}
+
+.prod-preview-image img{
+  display: block;
+  width: 100%;
+  height: 100%;
+  vertical-align: top;
+  padding: 0;
+}
+
+.prod-image-item {
+  float: left;
+  width: 50px;
+  margin-right: 10px;
+  min-height: 1px;
+}
+
+.prod-image-details {
+  float: left;
+  width: 410px;
+  height: 410px;
+  vertical-align: top;
+}
+
+.active-preview {
+  border: 2px solid #0074e9;
+}
+
+.prod-buy {
+  position: relative;
+  float: right;
+  width: 400px;
+  font-size: 12px;
+}
+
+.product-details {
+  min-height: 500px;
+}
+
+.other-prod-company {
+  min-height: 300px;
+}
+
+.details-page-url {
+  width: 100%;
+}
+
+.company-product-container {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+}
+
+.company-product {
+  width: 150px;
+  margin-right: 45px;
+  float: left;
+  position: relative;
+}
