--- a/src/main/resources/templates/mycoupang/userModify.html
+++ b/src/main/resources/templates/mycoupang/userModify.html
@@ -53,6 +53,6 @@
     </div>
   </div>
 </div>
-<script src="js/userModify.js"></script>
+<script src="/js/userModify.js"></script>
 </body>
 </html>
