--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,7 +16,7 @@
   <div class="grid-container">
     <div th:each="product : ${productPage.content}" class="grid-item">
       <a th:href="@{/products/{productId}(productId=${product.id})}" class="view-product">
-        <img th:src="${product.thumbnailUrls[0].thumbnailUrl}">
+        <img th:src="${product.thumbnailUrl}">
         <p th:text="${product.title}"></p>
         <p th:text="${product.price}+ ' 원'"></p>
         <span th:if="${product.rocketShipping}">로켓배송</span>
