--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,42 +1,11 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head>
-  <meta charset="UTF-8">
-  <title>Coupang</title>
-  <link rel="stylesheet" href="/css/style.css">
-  <script type="text/javascript"
-          src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script type="text/javascript"
-          src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-</head>
-<body>
+<head th:replace="head.html :: fragment-head()"></head>
 <div th:replace="nav.html :: fragment-nav(${user})"></div>
 <main id="main">
-  <div class="grid-container">
-    <div th:each="product : ${productPage.content}" class="grid-item">
-      <a th:href="@{/products/{productId}(productId=${product.id})}" class="view-product">
-        <img th:src="${product.thumbnailUrl}">
-        <p th:text="${product.title}"></p>
-        <p th:text="${product.price}+ ' 원'"></p>
-        <span th:if="${product.rocketShipping}">로켓배송</span>
-      </a>
-    </div>
-  </div>
+  <div th:replace="productGrid.html :: fragment-productGrid(${productPage})"></div>
 </main>
-<div id="pagination">
-  <span th:if="${productPage.getNumber()}/10 >= 1">
-    <a th:href="@{/(page= ${productPage.getNumber() / 10 * 10 -1})}">이전 페이지</a>
-  </span>
-  <th:block th:each="idx : ${#numbers.sequence(productPage.getNumber()/10 * 10 + 1, T(Math).min(productPage.getNumber()/10 * 10 + 10, productPage.getTotalPages()))}">
-    <span class="selected-num" th:if="${idx - 1 == productPage.getNumber()}" th:text="${idx}"></span>
-    <span th:unless="${idx - 1 == productPage.getNumber()}">
-      <a th:href="@{/(page= ${idx - 1})}" th:text="${idx}"></a>
-    </span>
-  </th:block>
-  <span th:if="${productPage.getNumber()}/10 != ${productPage.getTotalPages() - 1}/10">
-    <a th:href="@{/(page = ${productPage.getNumber() / 10 + 10})}">다음 페이지</a>
-  </span>
-</div>
+<div th:replace="paginationBar.html :: fragment-paginationBar(${productPage})"></div>
 </body>
 </html>
