--- a/src/main/resources/templates/mycoupang/userModify.html
+++ b/src/main/resources/templates/mycoupang/userModify.html
@@ -1,16 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head>
-  <meta charset="UTF-8">
-  <title>Coupang</title>
-  <link rel="stylesheet" href="/css/style.css">
-  <script type="text/javascript"
-          src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-          crossorigin="anonymous"></script>
-</head>
+<head th:replace="head.html :: fragment-head()"></head>
 <body>
 <div th:replace="nav.html :: fragment-nav(${user})"></div>
 <div class="content-container">
