--- a/src/main/resources/templates/productDetails.html
+++ b/src/main/resources/templates/productDetails.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head>
-  <meta charset="UTF-8">
-  <title>Coupang</title>
-  <link rel="stylesheet" href="/css/style.css">
-  <script type="text/javascript"
-          src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script type="text/javascript"
-          src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-</head>
+<head th:replace="head.html :: fragment-head()"></head>
 <body>
 <div th:replace="nav.html :: fragment-nav(${user})"></div>
 <div class="content-container">
@@ -98,9 +90,10 @@
       <div class="company-product-container" th:if="${companyProducts != null}">
         <th:block th:each="idx : ${#numbers.sequence(0, companyProducts.size() - 1)}">
           <div class="company-product">
-            <a th:href="@{/products/{productId}(productId=${companyProducts[idx].id})}"></a>
+            <a th:href="@{/products/{productId}(productId=${companyProducts[idx].id})}">
             <img th:src="${companyProducts[idx].thumbnailUrls[0].thumbnailUrl}" style="width: 100%">
             <p th:text="${companyProducts[idx].title}"></p>
+            </a>
           </div>
         </th:block>
       </div>
