검색 로켓 필터링 추가

--- a/src/main/resources/static/css/product.css
+++ b/src/main/resources/static/css/product.css
@@ -86,3 +86,9 @@
   float: left;
   position: relative;
 }
+
+.priceasc-price-ASC, .pricedesc-price-DESC,
+.salesrate-salesRate-DESC, .updateat-updatedAt-DESC {
+  color: #0074e9 !important;
+  font-weight: bold;
+}
