--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -45,7 +45,7 @@
   </div>
   <script>
     function search() {
-      window.location.href = "/search?keyword=" + $("#nav-search").val();
+      window.location.href = "/search?page=0&sort=price&direction=asc&keyword=" + $("#nav-search").val();
     }
   </script>
 </div>
